--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "devDependencies": {
     "@types/node": "^18.7.11",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "dotenv": "^16.0.1"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
     "web3": "^1.7.5"
   },
   "name": "eth-logs-decoder",
@@ -14,8 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "exemple": "tsc && ts-node ./exemple",
-    "publish": "tsc && npm publish"
+    "exemple": "tsc && ts-node ./exemple"
   },
   "keywords": [],
   "author": "",
