--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "prepublishOnly": "npm run build",
     "exemple": "tsc && ts-node ./exemple"
   },
   "keywords": [],
