--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "name": "eth-logs-decoder",
   "description": "Ethereum logs decoder",
   "version": "1.4.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
